# stm32-usb-fdc

./: .gitmodules  Cargo.toml  Embed.toml  Makefile  README.md  flash.sh  link.x
.cargo/: config
doc/: floppy_pins
src/: main.rs  startup.rs
src/peripheral/: gpio.rs  mod.rs  rcc.rs
stm32-usb-fdc/: Cargo.toml  build.rs
stm32-usb-fdc/src/: main.rs
